@@ -1,3 +1,2 @@
 web: bundle exec unicorn_rails -p $PORT
-export_worker: bundle exec rake run_export_job
 check_worker: bundle exec rake run_checker_job
