@@ -47,7 +47,6 @@ module Proiel
     autoload :DatabaseChecker, 'jobs/database_checker'
     autoload :DatabaseValidator, 'jobs/database_validator'
     autoload :AnnotationValidator, 'jobs/annotation_validator'
-    autoload :Exporter, 'jobs/exporter'
   end
 
   autoload :Metadata, 'metadata'
